# RubikscubesolverV1

./: CMakeLists.txt  GenericRubiksCube.cpp  GenericRubiksCube.h  main.cpp
Models/: GenericRubiksCube.cpp  GenericRubiksCube.h  RubiksCubeBitboard.cpp  Rubikscube3d.cpp
Models/Patter_DB_0/: pattern_DB_0.h
Pattern_DB/: Corner_DB_Maker.cpp  Corner_DB_Maker.h  Corner_pattern_DB.cpp  Corner_pattern_DB.h  Edge_DB_Maker.cpp  Edge_DB_Maker.h  Edge_pattern_DB.cpp  Edge_pattern_DB.h  Nibble_array.cpp  Nibble_array.h  Pattern_Database.cpp  Pattern_Database.h  Permut_indexer.h  math.cpp  math.h
Solvers/: BFS_solver.cpp  DFS_solver.cpp  IDAStar_Edge_Solver.cpp  IDAStar_Solver.cpp  IDDFS_solver.cpp
